--- a/find_shortest_path_dm.ipynb
+++ b/find_shortest_path_dm.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "find_shortest_path_dm.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOIRJxCMd8oacNpHHoyzD9b",
+      "authorship_tag": "ABX9TyPVprJroKEr8mJG8Plf1THr",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -106,7 +106,6 @@
     {
       "cell_type": "code",
       "metadata": {
-        "cellView": "form",
         "id": "6_PjeDEP9Jq3"
       },
       "source": [
@@ -117,18 +116,26 @@
         "\n",
         "\n",
         "def pairwise(iterable):\n",
-        "  \"\"\"s -> (s0,s1), (s1,s2), (s2, s3), ...\"\"\"\n",
+        "  \"\"\"\n",
+        "    input :\n",
+        "      s->(s0,s1,s2,s3)\n",
+        "    output:\n",
+        "      zip((s0,s1), (s1,s2), (s2, s3), ...)\n",
+        "  \"\"\"\n",
         "  a, b = itertools.tee(iterable)\n",
         "  next(b, None)\n",
         "  return zip(a, b)\n",
         "\n",
         "\n",
         "def set_diff(seq0, seq1):\n",
-        "  \"\"\"Return the set difference between 2 sequences as a list.\"\"\"\n",
+        "  \"\"\"Return the difference between 2 sequences as a list\"\"\"\n",
         "  return list(set(seq0) - set(seq1))\n",
         "\n",
         "\n",
         "def to_one_hot(indices, max_value, axis=-1):\n",
+        "  \"\"\"\n",
+        "    Return one hot encoding\n",
+        "  \"\"\"\n",
         "  one_hot = np.eye(max_value)[indices]\n",
         "  if axis not in (-1, one_hot.ndim):\n",
         "    one_hot = np.moveaxis(one_hot, -1, axis)\n",
@@ -136,7 +143,9 @@
         "\n",
         "\n",
         "def get_node_dict(graph, attr):\n",
-        "  \"\"\"Return a `dict` of node:attribute pairs from a graph.\"\"\"\n",
+        "  \"\"\"\n",
+        "    Return a dictionary of node:attribute pairs from a graph.\n",
+        "  \"\"\"\n",
         "  return {k: v[attr] for k, v in graph.nodes.items()}\n",
         "\n",
         "\n",
@@ -145,12 +154,12 @@
         "                   dimensions=2,\n",
         "                   theta=1000.0,\n",
         "                   rate=1.0):\n",
-        "  \"\"\"Creates a connected graph.\n",
-        "\n",
+        "  \"\"\"\n",
+        "  Creates a connected graph.\n",
         "  The graphs are geographic threshold graphs, but with added edges via a\n",
         "  minimum spanning tree algorithm, to ensure all nodes are connected.\n",
         "\n",
-        "  Args:\n",
+        "  Inputs:\n",
         "    rand: A random seed for the graph generator. Default= None.\n",
         "    num_nodes_min_max: A sequence [lower, upper) number of nodes per graph.\n",
         "    dimensions: (optional) An `int` number of dimensions for the positions.\n",
@@ -161,8 +170,8 @@
         "    rate: (optional) A rate parameter for the node weight exponential sampling\n",
         "      distribution. Default= 1.0.\n",
         "\n",
-        "  Returns:\n",
-        "    The graph.\n",
+        "  Output:\n",
+        "    Graph.\n",
         "  \"\"\"\n",
         "  # Sample num_nodes.\n",
         "  num_nodes = rand.randint(*num_nodes_min_max)\n",
@@ -171,8 +180,7 @@
         "  pos_array = rand.uniform(size=(num_nodes, dimensions))\n",
         "  pos = dict(enumerate(pos_array))\n",
         "  weight = dict(enumerate(rand.exponential(rate, size=num_nodes)))\n",
-        "  geo_graph = nx.geographical_threshold_graph(\n",
-        "      num_nodes, theta, pos=pos, weight=weight)\n",
+        "  geo_graph = nx.geographical_threshold_graph(num_nodes, theta, pos=pos, weight=weight)\n",
         "\n",
         "  # Create minimum spanning tree across geo_graph's nodes.\n",
         "  distances = spatial.distance.squareform(spatial.distance.pdist(pos_array))\n",
@@ -195,16 +203,16 @@
         "\n",
         "\n",
         "def add_shortest_path(rand, graph, min_length=1):\n",
-        "  \"\"\"Samples a shortest path from A to B and adds attributes to indicate it.\n",
+        "  \"\"\"\n",
+        "  Samples a shortest path from A to B and adds attributes to indicate it.\n",
         "\n",
-        "  Args:\n",
+        "  Input:\n",
         "    rand: A random seed for the graph generator. Default= None.\n",
         "    graph: A `nx.Graph`.\n",
-        "    min_length: (optional) An `int` minimum number of edges in the shortest\n",
-        "      path. Default= 1.\n",
+        "    min_length: (optional) An `int` minimum number of edges in the shortest path. Default= 1.\n",
         "\n",
-        "  Returns:\n",
-        "    The `nx.DiGraph` with the shortest path added.\n",
+        "  Output:\n",
+        "    nx.DiGraph with the shortest path added.\n",
         "\n",
         "  Raises:\n",
         "    ValueError: All shortest paths are below the minimum length\n",
@@ -259,14 +267,15 @@
         "\n",
         "\n",
         "def graph_to_input_target(graph):\n",
-        "  \"\"\"Returns 2 graphs with input and target feature vectors for training.\n",
+        "  \"\"\"\n",
+        "  Returns 2 graphs with input and target feature vectors for training.\n",
         "\n",
-        "  Args:\n",
+        "  Input:\n",
         "    graph: An `nx.DiGraph` instance.\n",
         "\n",
-        "  Returns:\n",
-        "    The input `nx.DiGraph` instance.\n",
-        "    The target `nx.DiGraph` instance.\n",
+        "  Output:\n",
+        "    input `nx.DiGraph` instance.\n",
+        "    target `nx.DiGraph` instance.\n",
         "\n",
         "  Raises:\n",
         "    ValueError: unknown node type\n",
@@ -307,9 +316,10 @@
         "\n",
         "\n",
         "def generate_networkx_graphs(rand, num_examples, num_nodes_min_max, theta):\n",
-        "  \"\"\"Generate graphs for training.\n",
+        "  \"\"\"\n",
+        "  Generate graphs for training.\n",
         "\n",
-        "  Args:\n",
+        "  Input:\n",
         "    rand: A random seed (np.RandomState instance).\n",
         "    num_examples: Total number of graphs to generate.\n",
         "    num_nodes_min_max: A 2-tuple with the [lower, upper) number of nodes per\n",
@@ -318,7 +328,7 @@
         "    theta: (optional) A `float` threshold parameters for the geographic\n",
         "      threshold graph's threshold. Default= the number of nodes.\n",
         "\n",
-        "  Returns:\n",
+        "  Output:\n",
         "    input_graphs: The list of input graphs.\n",
         "    target_graphs: The list of output graphs.\n",
         "    graphs: The list of generated graphs.\n",
@@ -337,9 +347,10 @@
         "\n",
         "\n",
         "def create_placeholders(rand, batch_size, num_nodes_min_max, theta):\n",
-        "  \"\"\"Creates placeholders for the model training and evaluation.\n",
+        "  \"\"\"\n",
+        "  Creates placeholders for the model training and evaluation.\n",
         "\n",
-        "  Args:\n",
+        "  Input:\n",
         "    rand: A random seed (np.RandomState instance).\n",
         "    batch_size: Total number of graphs per batch.\n",
         "    num_nodes_min_max: A 2-tuple with the [lower, upper) number of nodes per\n",
@@ -348,7 +359,7 @@
         "    theta: A `float` threshold parameters for the geographic threshold graph's\n",
         "      threshold. Default= the number of nodes.\n",
         "\n",
-        "  Returns:\n",
+        "  Output:\n",
         "    input_ph: The input graph's placeholders, as a graph namedtuple.\n",
         "    target_ph: The target graph's placeholders, as a graph namedtuple.\n",
         "  \"\"\"\n",
@@ -362,9 +373,10 @@
         "\n",
         "def create_feed_dict(rand, batch_size, num_nodes_min_max, theta, input_ph,\n",
         "                     target_ph):\n",
-        "  \"\"\"Creates placeholders for the model training and evaluation.\n",
+        "  \"\"\"\n",
+        "  Creates placeholders for the model training and evaluation.\n",
         "\n",
-        "  Args:\n",
+        "  Input:\n",
         "    rand: A random seed (np.RandomState instance).\n",
         "    batch_size: Total number of graphs per batch.\n",
         "    num_nodes_min_max: A 2-tuple with the [lower, upper) number of nodes per\n",
@@ -375,7 +387,7 @@
         "    input_ph: The input graph's placeholders, as a graph namedtuple.\n",
         "    target_ph: The target graph's placeholders, as a graph namedtuple.\n",
         "\n",
-        "  Returns:\n",
+        "  Output:\n",
         "    feed_dict: The feed `dict` of input and target placeholders and data.\n",
         "    raw_graphs: The `dict` of raw networkx graphs.\n",
         "  \"\"\"\n",
@@ -388,18 +400,17 @@
         "\n",
         "\n",
         "def compute_accuracy(target, output, use_nodes=True, use_edges=False):\n",
-        "  \"\"\"Calculate model accuracy.\n",
+        "  \"\"\"\n",
+        "  Calculate model accuracy: number of correctly predicted shortest path nodes and the number\n",
+        "  of completely solved graphs.\n",
         "\n",
-        "  Returns the number of correctly predicted shortest path nodes and the number\n",
-        "  of completely solved graphs (100% correct predictions).\n",
-        "\n",
-        "  Args:\n",
+        "  Input:\n",
         "    target: A `graphs.GraphsTuple` that contains the target graph.\n",
         "    output: A `graphs.GraphsTuple` that contains the output graph.\n",
         "    use_nodes: A `bool` indicator of whether to compute node accuracy or not.\n",
         "    use_edges: A `bool` indicator of whether to compute edge accuracy or not.\n",
         "\n",
-        "  Returns:\n",
+        "  Output:\n",
         "    correct: A `float` fraction of correctly labeled nodes/edges.\n",
         "    solved: A `float` fraction of graphs that are completely correctly labeled.\n",
         "\n",
@@ -441,7 +452,9 @@
         "\n",
         "\n",
         "def make_all_runnable_in_session(*args):\n",
-        "  \"\"\"Lets an iterable of TF graphs be output from a session as NP graphs.\"\"\"\n",
+        "  \"\"\"\n",
+        "    Lets an iterable of TF graphs be output from a session as NP graphs.\n",
+        "  \"\"\"\n",
         "  return [utils_tf.make_runnable_in_session(a) for a in args]\n",
         "\n",
         "\n",
